# tfm_uoc_boe_backend

./: .env.bak  .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
tfm_uoc_boe_backend/: __init__.py  __main__.py  conftest.py  settings.py
tfm_uoc_boe_backend/services/: __init__.py  boe.py  chatgpt.py  common.py
tfm_uoc_boe_backend/tests/: __init__.py  test_boe_endpoints.py  test_chatgpt_endpoints.py
tfm_uoc_boe_backend/web/: __init__.py  application.py
tfm_uoc_boe_backend/web/api/: __init__.py  router.py
tfm_uoc_boe_backend/web/api/boe/: __init__.py  schema.py  views.py
tfm_uoc_boe_backend/web/api/chatgpt/: __init__.py  schema.py  views.py
tfm_uoc_boe_backend/web/api/echo/: __init__.py  views.py
tfm_uoc_boe_backend/web/api/monitoring/: __init__.py
tfm_uoc_boe_backend/web/assets/prompts/: boe_resume.txt
